# bacpac-rs

./: .gitignore  Cargo.toml
examples/: data.rs  ffile.rs  run.rs
src/: bacpac.rs  lib.rs  old.rs2  simple.rs  table.rs
