[package]
name = "dacpac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.198", features = ["derive"] }
tracing = { version = "0.1.40", features = ["std"] }
tracing-serde = "0.1.3"
tracing-subscriber = "0.3.18"
zip = "1.1.1"
